# livvext

./: .pre-commit-config.yaml  LICENSE  README.md  all-documents.html  apidocs-help.html  classIndex.html  energy.energy.html  energy.html  env.yml  fullsearchindex.json  index.html  livvext.annual_cycle.html  livvext.common.LEX.html  livvext.common.html  livvext.compare_gridded.html  livvext.convert_cfg.html  livvext.energy.energy.html  livvext.energy.html  livvext.generate_cfg.html  livvext.html  livvext.smb.html  livvext.smb.smb_icecores.html  livvext.time_series_plot.html  livvext.utils.HTMLBackend.html  livvext.utils.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  requirements.txt  run_lex_pm-cpu.sbatch  run_livv.sh  searchindex.json  smb.html  smb.smb_icecores.html  undoccedSummary.html
.github/workflows/: docs.yml  publish.yml  python-package.yml
config/example/: example.yml
config/template_r025/: all.jinja  cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/template_r05/: all.jinja  cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v2.1.r025.IGERA5ELM_MLI-deep_firn_1980_2020/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v2.1.r05.BGWCYCL20TR-steve_2005_2014/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v2.1.r05.IGERA5ELM_MLI-deep_firn_0990_0999/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl-deepfirn-mec2_0100_0175/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl-deepfirn-mec_0001_0100/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl-deepfirn_0001_0100/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl-shallowfirn_0001_0050/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl.I.hex_eqm_0001_0100/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl.I.hex_eqm_0101_0200/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
config/v3.LR.piControl.I.hex_eqm_0201_0300/: cmb_ais.yml  cmb_gis.yml  energy_e3sm_ceres_ais.yml  energy_e3sm_ceres_gis.yml  energy_e3sm_era5_ais.yml  energy_e3sm_era5_gis.yml  energy_e3sm_merra2_merra_grid_ais.yml  energy_e3sm_merra2_merra_grid_gis.yml  energy_e3sm_racmo_ais.yml  energy_e3sm_racmo_gis.yml  smb_ais.yml  smb_gis.yml
lex/: annual_cycle.py  common.py  compare_gridded.py  generate_cfg.py  time_series_plot.py
lex/energy/: energy.py
lex/postproc/e3sm/: postproc.sbatch  split_files.sh
lex/smb/: smb_icecores.py
lex/smb/smb/: plot_spatial.py
livvext/: __init__.py  annual_cycle.py  common.py  compare_gridded.py  convert_cfg.py  generate_cfg.py  time_series_plot.py  utils.py
livvext/energy/: __init__.py  energy.py
livvext/example/: example.py
livvext/postproc/: README.md
livvext/postproc/e3sm/: postproc.sbatch  split_files.sh
livvext/smb/: __init__.py  smb_icecores.py
livvext/smb/smb/: plot_IB_hist.py  plot_IB_scatter.py  plot_core_hists.py  plot_core_transects.py  plot_spatial.py  preproc.py  utils.py
tests/: cfg_for_tests.jinja  example.bib  example2.bib  simple_test.yml  test_common.py  test_convert.py  test_gen_config.py  test_utils.py
