# coding=utf-8
# Copyright (c) 2018-2025 UT-BATTELLE, LLC
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
# list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
# this list of conditions and the following disclaimer in the documentation
# and/or other materials provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors
# may be used to endorse or promote products derived from this software without
# specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Michael Kelleher", email = "kelleherme@ornl.gov" },
    { name = "Joseph H. Kennedy", email = "kennedyjh@ornl.gov" },
]
name = "LIVVext"
requires-python = ">=3.10"
description = "Extensions for the land ice verification and validation toolkit (Livvkit EXtensions)"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "BSD-3-Clause" }

dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "xarray>=2025.6.1",
    "dask>=2026.1.2",
    "seaborn>=0.13.2",
    "cftime>=1.6.5",
    "nc-time-axis>=1.4.1",
    "scikit-learn>=1.7.2",
    "ruamel.yaml>=0.19.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pandas>=2.2.3",
    "cartopy>=0.25.0",
    "pybtex>=0.25.1",
    "f90nml>=1.5",
    "loguru>=0.7.3",
    "livvkit>=3.3.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["livvext", "livvext.smb", "livvext.energy"]

[tool.setuptools.dynamic]
version = { attr = "livvext.__version__" }

[project.urls]
Homepage = "https://github.com/LIVVkit/livvext"

[project.scripts]
lex-cfg = "livvext.generate_cfg:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
livvext = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mache = ">=2.1.0"
nco = ">=5.3.6"

# Development tools
[tool.pixi.feature.dev.dependencies]
isort = "*"
pytest = "*"
ruff = "*"
pre-commit = "*"

# Different Python versions for CI testing
[tool.pixi.feature.py310dev.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311dev.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312dev.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313dev.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314dev.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = ["dev"]
py310dev = ["py310dev", "dev"]
py311dev = ["py311dev", "dev"]
py312dev = ["py312dev", "dev"]
py313dev = ["py313dev", "dev"]
py314dev = ["py314dev", "dev"]
